<resources>
    <string name="app_name">Worqspace</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_calendar">Calendar</string>
    <string name="menu_shopping_list">Shopping List</string>
    <string name="menu_collections">Collections</string>
    <string name="add_event">Add event</string>
    <string name="deadline">Deadline</string>
    <string name="appointment">Appointment</string>
    <string name="task">Task</string>
    <string name="birthday">Birthday</string>
    <string name="placeholder_time">HH:MM</string>
    <string name="event_name">Event name</string>
    <string name="event_location">Event location</string>
    <string name="event_description">Event description</string>
    <string name="start_time">Start time</string>
    <string name="default_time" translatable="false">12:00</string>
    <string name="end_time">End time</string>
    <string name="default_time_end" translatable="false">13:00</string>
    <string name="create">Create</string>
    <string name="event_date">Event date</string>
</resources>