<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_appointment"
        android:title="@string/appointment"
        android:icon="@drawable/appointment"
        app:iconTint="@color/black" />
    <item
        android:id="@+id/action_deadline"
        android:title="@string/deadline"
        android:icon="@drawable/deadline"
        app:iconTint="@color/black" />
    <item
        android:id="@+id/action_task"
        android:title="@string/task"
        android:icon="@drawable/task"
        app:iconTint="@color/black" />
    <item
        android:id="@+id/action_birthday"
        android:title="@string/birthday"
        android:icon="@drawable/birthday"
        app:iconTint="@color/black" />
</menu>