<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="io.github.acaimingus.worqspace.ui.calendar.CalendarFragment"
        android:label="@string/menu_calendar"
        tools:layout="@layout/fragment_calendar" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="io.github.acaimingus.worqspace.ui.shoppingList.ShoppingListFragment"
        android:label="@string/menu_shopping_list"
        tools:layout="@layout/fragment_shopping_list" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="io.github.acaimingus.worqspace.ui.collections.CollectionsFragment"
        android:label="@string/menu_collections"
        tools:layout="@layout/fragment_slideshow" />
</navigation>